--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>Math resource</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <div class="logo-wrapper"></div>
+        <ul class="nav-links">
+          <li>
+            <a href="#">ავტორიზაცია</a>
+          </li>
+          <li>
+            <a href="#">პროექტის შესახებ</a>
+          </li>
+          <li>
+            <a href="#">კონტაქტი</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
     <script src="./js/navigation.js"></script>
     <script src="./js/app.js"></script>
     <script src="./js/api.js"></script>
