--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./css/global.css" />
     <title>Math resource</title>
   </head>
   <body>
@@ -24,7 +24,21 @@
         </ul>
       </nav>
     </header>
-
+    <h1>ამოხსენი მათემატიკური ამოცანები პითონის პროგრამული ენით</h1>
+    <section class="container">
+      <div class="filter">ფილტრი:</div>
+      <div class="sorting">
+        <p>სორტირება:</p>
+        <button type="button" class="popular" id="popular">პოპულარობა</button>
+        <button type="button" class="date" id="date">თარიღი</button>
+        <button type="button" class="alphabet" id="alphabet">ანბანი</button>
+      </div>
+    </section>
+    <section class="container">
+      <div class="filters-wrapper"></div>
+      <div class="cards-wrapper" id="cards-wrapper">
+      </div>
+    </section>
     <script src="./js/navigation.js"></script>
     <script src="./js/app.js"></script>
     <script src="./js/api.js"></script>
