Add relevant path to the nav-links

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="logo-wrapper"></div>
         <ul class="nav-links">
           <li>
-            <a href="#">ავტორიზაცია</a>
+            <a href="pages/auth.html">ავტორიზაცია</a>
           </li>
           <li>
             <a href="pages/about.html">პროექტის შესახებ</a>
           </li>
           <li>
-            <a href="#">კონტაქტი</a>
+            <a href="pages/contacts.html">კონტაქტი</a>
           </li>
         </ul>
       </nav>
