--- a/pages/about.html
+++ b/pages/about.html
@@ -15,13 +15,13 @@
         </a>
         <ul class="nav-links">
           <li>
-            <a href="#">ავტორიზაცია</a>
+            <a href="auth.html">ავტორიზაცია</a>
           </li>
           <li>
-            <a href="#">პროექტის შესახებ</a>
+            <a href="about.html">პროექტის შესახებ</a>
           </li>
           <li>
-            <a href="#">კონტაქტი</a>
+            <a href="contacts.html">კონტაქტი</a>
           </li>
         </ul>
       </nav>
