--- a/pages/auth.html
+++ b/pages/auth.html
@@ -35,7 +35,6 @@
           <input
             type="email"
             id="email"
-            placeholder="jondoe@mail.com"
             required
           />
           <label for="pass">პაროლი</label>
@@ -61,7 +60,7 @@
           <button type="button" id="registration">რეგისტრაცია</button>
         </form>
         <form action="submit" class="pass-form" id="pass-form">
-          <h3>ავტორიზაცია</h3>
+          <h3>პაროლის აღდგენა</h3>
           <label for="email">ახალი პაროლი</label>
           <input
             type="password"
@@ -81,6 +80,18 @@
             <button type="button" class="recovery" id="recovery">პაროლის აღდგენა</button>
           </div>
           <button type="button" id="enter">დამახსოვრება</button>
+          <button type="button" id="registration">რეგისტრაცია</button>
+        </form>
+        <form action="submit" class="pass-form" id="pass-form">
+          <h3>პაროლის აღდგენა</h3>
+          <label for="email">ი-მეილი</label>
+          <input
+            type="email"
+            id="email"
+            required
+          />
+          </div>
+          <button type="button" id="enter-send">გაგზავნა</button>
           <button type="button" id="registration">რეგისტრაცია</button>
         </form>
       </section>
