Add registration card

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo-wrapper"></div>
         <ul class="nav-links">
           <li>
-            <a href="pages/auth.html">ავტორიზაცია</a>
+            <a href="pages/auth.html" id="auth-link">ავტორიზაცია</a>
           </li>
           <li>
             <a href="pages/about.html">პროექტის შესახებ</a>
