--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -15,7 +15,7 @@
         </a>
         <ul class="nav-links">
           <li>
-            <a href="auth.html">ავტორიზაცია</a>
+            <a href="auth.html" id="auth-link">ავტორიზაცია</a>
           </li>
           <li>
             <a href="about.html">პროექტის შესახებ</a>
