--- a/pages/about.html
+++ b/pages/about.html
@@ -36,5 +36,8 @@
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
     </p>
+    <script src="../js/navigation.js"></script>
+    <script src="../js/app.js"></script>
+    <script src="../js/api.js"></script>
   </body>
 </html>
