--- a/pages/auth.html
+++ b/pages/auth.html
@@ -174,5 +174,8 @@
         </form>
       </section>
     </main>
+    <script src="../js/navigation.js"></script>
+    <script src="../js/app.js"></script>
+    <script src="../js/api.js"></script>
   </body>
 </html>
