--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -26,5 +26,8 @@
         </ul>
       </nav>
     </header>
+    <script src="../js/navigation.js"></script>
+    <script src="../js/app.js"></script>
+    <script src="../js/api.js"></script>
   </body>
 </html>
