Add validations to each form field in app.js file

--- a/pages/auth.html
+++ b/pages/auth.html
@@ -38,11 +38,10 @@
         </div>
           <div>
           <input
-            type="email"
+            type="text"
             name="email"
             class="input"
             id="email"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -57,8 +56,6 @@
             id="pass"
             name="password"
             class="input"
-            minlength="8"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -90,8 +87,6 @@
             id="recovery_password"
             name="password"
             class="input"
-            minlength="8"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -106,8 +101,6 @@
             id="repeat_pass"
             name="password"
             class="input"
-            minlength="8"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -125,16 +118,18 @@
           </div>
           <div>
           <input
-            type="email"
+            type="text"
             name="email"
             class="email input"
             id="recovery_email"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
         </div>
+        <div class="btn-wrapper-onMail">
+        <button type="button" id="cancel">გაუქმება</button>
           <button type="submit" id="enter-send">გაგზავნა</button>
+        </div>
           <button type="button" class="registration" id="registration-on-email">რეგისტრაცია</button>
         </form>
         <form action="submit" class="register-form" id="register-form">
@@ -149,8 +144,6 @@
             id="first_name"
             name="first_name"
             class="input"
-            minlength="8"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -165,8 +158,6 @@
             id="last_name"
             name="last_name"
             class="input"
-            minlength="8"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -181,8 +172,6 @@
             id="region"
             name="region"
             class="input"
-            minlength="8"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -197,8 +186,6 @@
             id="school"
             name="school"
             class="input"
-            minlength="8"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -213,8 +200,6 @@
             id="grade"
             class="grade input"
             name="grade"
-            minlength="8"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -225,11 +210,10 @@
         </div>
           <div>
           <input
-            type="email"
+            type="text"
             name="email"
             class="input"
             id="register_email"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -244,8 +228,6 @@
             id="new_password"
             name="new_password"
             class="input"
-            minlength="8"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
@@ -260,8 +242,6 @@
             id="repeat_new_pass"
             name="repeat_new_pass"
             class="input"
-            minlength="8"
-            required
           />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
