Add success page

--- a/pages/auth.html
+++ b/pages/auth.html
@@ -27,7 +27,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="authorization" >
       <section class="auth-container" id="auth-container">
         <h1>მათემატიკის რესურსი</h1>
         <form action="submit" class="auth-form" id="auth-form">
@@ -256,6 +256,11 @@
             </div>
           <button type="submit" class="enter" id="registration-button">რეგისტრაცია</button>
         </form>
+      </section>
+      <section class="successful-registration" id="successful-registration">
+        <h3>თქვენ წარმატებით</h3>
+        <h2>დარეგისტრირდით</h2>
+        <p>დასადასტურებელი შეტყობინება გამოგზავნილია თქვენს ი-მეილზე</p>
       </section>
     </main>
     <script src="../js/navigation.js"></script>
