Add recovery success tab and recovery again tab

--- a/pages/auth.html
+++ b/pages/auth.html
@@ -262,6 +262,11 @@
         <h2>დარეგისტრირდით</h2>
         <p>დასადასტურებელი შეტყობინება გამოგზავნილია თქვენს ი-მეილზე</p>
       </section>
+      <section class="successful-recovery-tab" id="successful-recovery-tab">
+        <h3>პაროლის აღდგენა</h3>
+        <p>პაროლის აღდგენის ინსტრუქცია გამოგზავნილია თქვენს ი-მეილზე</p>
+        <button type="button" id="send-to-recovery-again">გაგზავნა განმეორებით</button>
+      </section>
     </main>
     <script src="../js/navigation.js"></script>
     <script src="../js/app.js"></script>
