--- a/pages/auth.html
+++ b/pages/auth.html
@@ -267,6 +267,9 @@
         <p>პაროლის აღდგენის ინსტრუქცია გამოგზავნილია თქვენს ი-მეილზე</p>
         <button type="button" id="send-to-recovery-again">გაგზავნა განმეორებით</button>
       </section>
+      <section class="successful-pass-change" id="successful-pass-change">
+        <h2>პაროლი წარმატებით შეიცვალა</h2>
+      </section>
     </main>
     <script src="../js/navigation.js"></script>
     <script src="../js/app.js"></script>
