--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <header>
       <nav>
-        <div class="logo-wrapper"></div>
+        <div class="logo-wrapper">
+          <img src="./assets/mathlogo.png" alt="logo" class="logo" />
+        </div>
         <ul class="nav-links">
           <li>
             <a href="pages/auth.html" id="auth-link">ავტორიზაცია</a>
@@ -215,6 +217,7 @@
       </div>
       <div class="cards-wrapper" id="cards-wrapper"></div>
     </section>
+
     <script src="./js/navigation.js"></script>
     <script src="./js/app.js"></script>
     <script src="./js/api.js"></script>
