--- a/pages/auth.html
+++ b/pages/auth.html
@@ -12,7 +12,9 @@
     <header>
       <nav>
         <a href="../index.html">
-          <div class="logo-wrapper"></div>
+          <div class="logo-wrapper">
+            <img src="../assets/mathlogo.png" alt="logo" class="logo" />
+          </div>
         </a>
         <ul class="nav-links">
           <li>
