Fix error message postions and bugs with reg.form

--- a/pages/auth.html
+++ b/pages/auth.html
@@ -36,29 +36,35 @@
           <label for="email">ი-მეილი</label>
           <div class="email-msg sb4">სცადეთ სხვა იმეილი</div>
         </div>
-          <div>
+          <div class="input-icons">
           <input
             type="text"
             name="email"
             class="input"
             id="email"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
+        </div>
         </div>
         <div class="msg-wrapper">
           <label for="pass">პაროლი</label>
           <div class="email-msg sb4">სცადეთ სხვა პაროლი</div>
         </div>
           <div>
+            <div class="input-icons">
           <input
             type="password"
             id="pass"
             name="password"
             class="input"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
+        </div>
+        </div>
         </div>
           <div class="restore-wrapper">
             <div>
@@ -82,28 +88,36 @@
             <div class="email-msg sb4">სცადეთ სხვა პაროლი</div>
           </div>
           <div>
+            <div class="input-icons">
           <input
             type="password"
             id="recovery_password"
             name="password"
             class="input"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
         </div>
+        </div>
+      </div>
         <div class="msg-wrapper">
           <label for="pass">გაიმეორეთ პაროლი</label>
           <div class="email-msg sb4">პაროლი არ ემთხვევა</div>
         </div>
           <div>
+            <div class="input-icons">
           <input
             type="password"
             id="repeat_pass"
             name="password"
             class="input"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
+        </div>
+        </div>
         </div>
             <button type="button" class="recovery" id="recovery">პაროლის აღდგენა</button>
           </div>
@@ -117,14 +131,18 @@
             <div class="email-msg sb4">სცადეთ სხვა იმეილი</div>
           </div>
           <div>
+            <div class="input-icons">
           <input
             type="text"
             name="email"
             class="email input"
             id="recovery_email"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
+        </div>
+        </div>
         </div>
         <div class="btn-wrapper-onMail">
         <button type="button" id="cancel">გაუქმება</button>
@@ -139,112 +157,138 @@
             <div class="email-msg sb4">ამ ველის შევსება აუცილებელია</div>
           </div>
           <div>
+            <div class="input-icons">
           <input
             type="text"
             id="first_name"
             name="first_name"
             class="input"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
+        </div>
+        </div>
         </div>
         <div class="msg-wrapper">
           <label for="pass">გვარი</label>
           <div class="email-msg sb4">ამ ველის შევსება აუცილებელია</div>
         </div>
           <div>
+            <div class="input-icons">
           <input
             type="text"
             id="last_name"
             name="last_name"
             class="input"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
+        </div>
+        </div>
         </div>
         <div class="msg-wrapper">
           <label for="pass">რეგიონი</label>
           <div class="email-msg sb4">ამ ველის შევსება აუცილებელია</div>
         </div>
           <div>
+            <div class="input-icons">
           <input
             type="text"
             id="region"
             name="region"
             class="input"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
+        </div>
+        </div>
         </div>
         <div class="msg-wrapper">
           <label for="pass">სკოლა</label>
           <div class="email-msg sb4">ამ ველის შევსება აუცილებელია</div>
         </div>
           <div>
+            <div class="input-icons">
           <input
             type="text"
             id="school"
             name="school"
             class="input"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
+        </div>
+        </div>
         </div>
         <div class="msg-wrapper">
           <label for="pass">კლასი</label>
           <div class="email-msg sb4">ამ ველის შევსება აუცილებელია</div>
         </div>
           <div>
+            <div class="input-icons">
           <input
             type="text"
             id="grade"
             class="grade input"
             name="grade"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
         </div>
+        </div>
+      </div>
         <div class="msg-wrapper">
           <label for="pass">ი-მეილი</label>
           <div class="email-msg sb4">ი-მეილი უკვე არსებობს</div>
         </div>
-          <div>
+            <div class="input-icons">
           <input
             type="text"
             name="email"
             class="input"
             id="register_email"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
+        </div>
         </div>
         <div class="msg-wrapper">
           <label for="pass">პაროლი</label>
           <div class="email-msg sb4">სცადეთ სხვა პაროლი</div>
         </div>
-          <div>
+        <div class="input-icons">
           <input
             type="password"
             id="new_password"
             name="new_password"
             class="input"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
+        </div>
         </div>
         <div class="msg-wrapper">
           <label for="pass">გაიმეორეთ პაროლი</label>
           <div class="email-msg sb4">პაროლი არ ემთხვევა</div>
         </div>
-          <div>
+        <div class="input-icons">
           <input
             type="password"
             id="repeat_new_pass"
             name="repeat_new_pass"
             class="input"
           />
+          <div>
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="far fa-check-circle success-icon"></i>
+        </div>
         </div>
           <div class="agree-policies-wrapper">
           <input
